Source/WebCore/rendering/mathml/MathOperator.cpp
@@ -38,7 +38,7 @@ namespace WebCore {
 
 static inline FloatRect boundsForGlyph(const GlyphData& data)
 {
-    return data.isValid() ? data.font->boundsForGlyph(data.glyph) : FloatRect();
+    return data.font ? data.font->boundsForGlyph(data.glyph) : FloatRect();
 }
 
 static inline float heightForGlyph(const GlyphData& data)
@@ -55,7 +55,7 @@ static inline void getAscentAndDescentForGlyph(const GlyphData& data, LayoutUnit
 
 static inline float advanceWidthForGlyph(const GlyphData& data)
 {
-    return data.isValid() ? data.font->widthForGlyph(data.glyph) : 0;
+    return data.font ? data.font->widthForGlyph(data.glyph) : 0;
 }
 
 // FIXME: This hardcoded data can be removed when OpenType MATH font are widely available (http://wkbug/156837).
@@ -124,12 +124,12 @@ LayoutUnit MathOperator::stretchSize() const
 bool MathOperator::getBaseGlyph(const RenderStyle& style, GlyphData& baseGlyph) const
 {
     baseGlyph = style.fontCascade().glyphDataForCharacter(m_baseCharacter, !style.isLeftToRightDirection());
-    return baseGlyph.isValid() && baseGlyph.font == &style.fontCascade().primaryFont();
+    return baseGlyph.font && baseGlyph.font == &style.fontCascade().primaryFont();
 }
 
 void MathOperator::setSizeVariant(const GlyphData& sizeVariant)
 {
-    ASSERT(sizeVariant.isValid());
+    ASSERT(sizeVariant.font);
     ASSERT(sizeVariant.font->mathData());
     m_stretchType = StretchType::SizeVariant;
     m_variant = sizeVariant;
@@ -468,7 +468,7 @@ void MathOperator::fillWithVerticalExtensionGlyph(const RenderStyle& style, Pain
 {
     ASSERT(m_operatorType == Type::VerticalOperator);
     ASSERT(m_stretchType == StretchType::GlyphAssembly);
-    ASSERT(m_assembly.extension.isValid());
+    ASSERT(m_assembly.extension.font);
     ASSERT(from.y() <= to.y());
 
     // If there is no space for the extension glyph, we don't need to do anything.
@@ -507,7 +507,7 @@ void MathOperator::fillWithHorizontalExtensionGlyph(const RenderStyle& style, Pa
 {
     ASSERT(m_operatorType == Type::HorizontalOperator);
     ASSERT(m_stretchType == StretchType::GlyphAssembly);
-    ASSERT(m_assembly.extension.isValid());
+    ASSERT(m_assembly.extension.font);
     ASSERT(from.x() <= to.x());
     ASSERT(from.y() == to.y());
 
@@ -545,8 +545,8 @@ void MathOperator::paintVerticalGlyphAssembly(const RenderStyle& style, PaintInf
 {
     ASSERT(m_operatorType == Type::VerticalOperator);
     ASSERT(m_stretchType == StretchType::GlyphAssembly);
-    ASSERT(m_assembly.topOrRight.isValid());
-    ASSERT(m_assembly.bottomOrLeft.isValid());
+    ASSERT(m_assembly.topOrRight.font);
+    ASSERT(m_assembly.bottomOrLeft.font);
 
     // We are positioning the glyphs so that the edge of the tight glyph bounds line up exactly with the edges of our paint box.
     LayoutPoint operatorTopLeft = paintOffset;
@@ -558,7 +558,7 @@ void MathOperator::paintVerticalGlyphAssembly(const RenderStyle& style, PaintInf
     LayoutPoint bottomGlyphOrigin(operatorTopLeft.x(), operatorTopLeft.y() + stretchSize() - (bottomGlyphBounds.height() + bottomGlyphBounds.y()));
     LayoutRect bottomGlyphPaintRect = paintGlyph(style, info, m_assembly.bottomOrLeft, bottomGlyphOrigin, TrimTop);
 
-    if (m_assembly.middle.isValid()) {
+    if (m_assembly.middle.font) {
         // Center the glyph origin between the start and end glyph paint extents. Then shift it half the paint height toward the bottom glyph.
         FloatRect middleGlyphBounds = boundsForGlyph(m_assembly.middle);
         LayoutPoint middleGlyphOrigin(operatorTopLeft.x(), topGlyphOrigin.y());
@@ -576,8 +576,8 @@ void MathOperator::paintHorizontalGlyphAssembly(const RenderStyle& style, PaintI
 {
     ASSERT(m_operatorType == Type::HorizontalOperator);
     ASSERT(m_stretchType == StretchType::GlyphAssembly);
-    ASSERT(m_assembly.bottomOrLeft.isValid());
-    ASSERT(m_assembly.topOrRight.isValid());
+    ASSERT(m_assembly.bottomOrLeft.font);
+    ASSERT(m_assembly.topOrRight.font);
 
     // We are positioning the glyphs so that the edge of the tight glyph bounds line up exactly with the edges of our paint box.
     LayoutPoint operatorTopLeft = paintOffset;
@@ -589,7 +589,7 @@ void MathOperator::paintHorizontalGlyphAssembly(const RenderStyle& style, PaintI
     LayoutPoint rightGlyphOrigin(operatorTopLeft.x() + stretchSize() - rightGlyphBounds.width(), baselineY);
     LayoutRect rightGlyphPaintRect = paintGlyph(style, info, m_assembly.topOrRight, rightGlyphOrigin, TrimLeft);
 
-    if (m_assembly.middle.isValid()) {
+    if (m_assembly.middle.font) {
         // Center the glyph origin between the start and end glyph paint extents.
         LayoutPoint middleGlyphOrigin(operatorTopLeft.x(), baselineY);
         middleGlyphOrigin.moveBy(LayoutPoint((rightGlyphPaintRect.x() - leftGlyphPaintRect.maxX()) / 2.0, 0));
@@ -632,7 +632,7 @@ void MathOperator::paint(const RenderStyle& style, PaintInfo& info, const Layout
         if (!getBaseGlyph(style, glyphData))
             return;
     } else if (m_stretchType == StretchType::SizeVariant) {
-        ASSERT(m_variant.isValid());
+        ASSERT(m_variant.font);
         glyphData = m_variant;
     }
     GlyphBuffer buffer;
